Get the location of the user.

--- a/web-front-end/main.html
+++ b/web-front-end/main.html
@@ -5,6 +5,16 @@
 	<meta charset="utf-8" />
 </head>
 <body>
+	<ul>
+		<li class="rank">超过</li>
+		<li class="rank">快了</li>
+		<li class="rank">刷新</li>
+		<li class="rank"></li>
+		<li class="rank"></li>
+	</ul>
+	<form action="/share" method="post" accept-charset="utf-8">
+		<button id="share">分享成果</button>
+	</form>
 	<button id="location">get</button>
 	<script src="https://cdnjs.net/ajax/libs/jquery/2.1.1-rc2/jquery.min.js"></script>
 	<script src="js/main.js"></script>
